# rs-imap-notify

./: Cargo.toml  README.md  imap-notify.service
src/: config.rs  dbus_notify.rs  imap_notify.rs  main.rs
