[package]
name = "imap-notify"
version = "0.1.0"
authors = ["Antonio Cardace <acardace@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
imap = "2.2.0"
native-tls = "0.2.4"
dbus = "0.8.4"
log = "0.4.11"
simple_logger = "1.6.0"
mailparse = "0.13.0"
serde_yaml = "0.8.13"
serde = { version = "1.0.115", features = ["derive"] }
libc = "0.2.76"
